# Big-Yellow-J.github.io

./: .gitignore  .jekyll-metadata  404.html  404.md  Bing_indexnow.txt  CLAUDE.md  CNAME  DEAL-MD.json  Dio.dio  Dio.drawio  Gemfile  LIFE-PRIVATE-SETUP.md  README.md  TODO.md  _config.yml  blog.sh  get_url.py  index.html  index_now.txt  manifest.json  optim_post.py  optim_post_new.py  preview_writing.html  robots.txt  submit_github.sh  submit_url.py
.github/: dependabot.yml
.obsidian/: workspace.json
_includes/: ext-adsense.html  ext-mathjax.html  ext-mermaid.html  footer.html  head.html  header.html  script.html  writing-heatmap.html
_jupyter/: OpenRLHF_model.py.txt  PythoThreading copy.py  PythoThreading.py  python_code.ipynb  test.py  test.txt
_layouts/: TODO.html  code.html  cv.html  jupyter-post.html  mypost.html  note.html  redirect.html
_posts/: 2024-01-01-AlexNet.md  2024-01-01-GoogleNet.md  2024-01-01-LeNet.md  2024-01-01-alexnet.md  2024-01-02-BayesianOptimization.md  2024-01-02-PythonThreading.md  2024-01-03-lime.md  2024-01-04-shapvalue.md  2024-01-05-Ensemble Learning.md  2024-01-06-featureengine.md  2025-01-01-evaluation-lossfunction.md  2025-01-01-mixed-precision.md  2025-01-02-deepspeed.md  2025-01-03-DistributeTraining.md  2025-01-04-learning_rate.md  2025-01-05-DL中正则化方法.md  2025-01-05-dl-norm.md  2025-01-06-TextEmbedding.md  2025-01-18-CV-Backbone.md  2025-01-27-MoE-KV-cache.md  2025-01-27-MoE.md  2025-02-15-LLM.md  (+83 more)
writing/Cpp-Learning/Numlist/: CMakeLists.txt  cmake_run  main  main.cpp  main_template.cpp  numlist_function.h  sort_numlist.cpp
(+1684 files in other folders)
